# fastapi-rabbitmq-practice

./: .gitignore  constants.py  consumer.py  database.py  main.py  message_types.py  producer.py  pyproject.toml
